# telegram-ai-bot

./: .gitignore  README.md  azure_api.py  bot.py  config.py  databaseorm.py  fsm_states_group.py  keyboards.py  main.py  pyproject.toml
